refactor(tui): coordinate transcript commits and inline surface